completé le responsive pour les plus large screen (1200px et plus)

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 					<!-- For flex box to align the content with the image -->
 					<div class="about__content">
 						<p class="about__paragraph">
-							La solution cawipad est conçue pour réaliser tout types de
+							<span>La solution cawipad</span> est conçue pour réaliser tout types de
 							questionnaires, formulaires et enquêtes de satisfaction sur
 							tablette dans le cadre d’un service « clés-en-main ».
 						</p>
@@ -98,6 +98,8 @@
 					<div class="about__container">
 						<svg
 							class="about__image"
+							width="355"
+							height="304"
 							viewBox="0 0 355 304"
 							fill="none"
 							xmlns="http://www.w3.org/2000/svg"
@@ -1449,7 +1451,7 @@
 					</a>
 				</div>
 				<p class="footer__copyright">
-					Copyright (c) 2023 Cawipad, Tous droits réservés.
+					Copyright (c) 2022 Cawipad, Tous droits réservés.
 				</p>
 			</div>
 		</footer>
