add mobile menu & fix some bugs & add header animation

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 						<a href="#" class="nav__logo">
 							<img src="assets/svg/logo.svg" alt="logo-image" />
 						</a>
-						<ul class="nav__links">
+						<ul class="nav__links" id="nav-menu">
 							<li>
-								<a href="#">Accueil</a>
+								<a href="#" class="nav__link">Accueil</a>
 							</li>
 							<li>
-								<a href="#">Contact</a>
+								<a href="#" class="nav__link">Contact</a>
 							</li>
 						</ul>
 						<div class="nav__toggle" id="nav-toggle">
