compléte la page de contact pour mobile screen

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<div class="container">
 				<nav class="nav flex">
 					<a href="#" class="nav__logo">
-						<img src="assets/svg/logo.svg" alt="logo-image" />
+						<img src="assets/svg/accueil/logo.svg" alt="logo-image" />
 					</a>
 
 					<ul class="nav__links" id="nav-menu">
@@ -95,7 +95,7 @@
 							</div>
 						</section>
 						<img
-							src="assets/svg/home_image.svg"
+							src="assets/svg/accueil/home_image.svg"
 							class="home__image"
 							alt="home-image"
 						/>
@@ -323,7 +323,7 @@
 						<div class="work__number">01</div>
 						<h3 class="work__title">Conception du questionnaire</h3>
 						<img
-							src="assets/svg/works/work_image-1.svg"
+							src="assets/svg/accueil/works/work_image-1.svg"
 							class="work__image"
 							alt="work-image-1"
 						/>
@@ -340,7 +340,7 @@
 							installation sur tablettes
 						</h3>
 						<img
-							src="assets/svg/works/work_image-2.svg"
+							src="assets/svg/accueil/works/work_image-2.svg"
 							alt="work-image-2"
 							class="work__image"
 						/>
@@ -354,7 +354,7 @@
 						<div class="work__number">03</div>
 						<h3 class="work__title">Envoi des résultats en temps réel</h3>
 						<img
-							src="assets/svg/works/work_image-3.svg"
+							src="assets/svg/accueil/works/work_image-3.svg"
 							alt="work-image-3"
 							class="work__image"
 						/>
@@ -370,7 +370,7 @@
 							cawipad.fr
 						</h3>
 						<img
-							src="assets/svg/works/work_image-4.svg"
+							src="assets/svg/accueil/works/work_image-4.svg"
 							alt="work-image-4"
 							class="work__image"
 						/>
@@ -398,7 +398,7 @@
 					<article class="service">
 						<div class="image__container">
 							<img
-								src="assets/svg/services/service_image-1.svg"
+								src="assets/svg/accueil/services/service_image-1.svg"
 								alt="service-image"
 								class="service__image"
 							/>
@@ -412,7 +412,7 @@
 					<article class="service">
 						<div class="image__container">
 							<img
-								src="assets/svg/services/service_image-2.svg"
+								src="assets/svg/accueil/services/service_image-2.svg"
 								alt="service-image"
 								class="service__image"
 							/>
@@ -426,7 +426,7 @@
 					<article class="service">
 						<div class="image__container">
 							<img
-								src="assets/svg/services/service_image-3.svg"
+								src="assets/svg/accueil/services/service_image-3.svg"
 								alt="service-image"
 								class="service__image"
 							/>
@@ -590,7 +590,7 @@
 			<div class="container">
 				<img
 					class="footer__logo"
-					src="assets/svg/logo-light.svg"
+					src="assets/svg/accueil/logo-light.svg"
 					alt="logo-image"
 				/>
 				<div class="flex__footer">
