--- a/fr/contact.html
+++ b/fr/contact.html
@@ -10,7 +10,7 @@
 		<title>Cawipad Contact page</title>
 	</head>
 	<body>
-		<main class="contact section">
+		<main class="contact">
 			<div class="container">
 				<h1 class="section__title">Contactez-Nous</h1>
 				<p class="section__paragraph">
@@ -18,102 +18,108 @@
 					la sécurité et le confort à l’esprit
 				</p>
 
-				<!-- ========== FORM SECTION ============= -->
 				<section class="flex__contact">
-					<div class="contact__content">
-						<form action="register" class="contact__form">
-							<div class="flex__input">
-								<div class="input__container">
-									<label for="name">Nom</label>
-									<input type="text" id="name" class="contact__input" />
-								</div>
-								<div class="input__container">
-									<label for="email">Email</label>
-									<input type="email" id="email" class="contact__input" />
-								</div>
+					<!-- ========== FORM SECTION ============= -->
+					<form action="register" class="contact__form">
+						<div class="flex__input">
+							<div class="input__container">
+								<label for="name">Nom</label>
+								<input type="text" id="name" class="contact__input" />
 							</div>
-							<div class="flex__input">
-								<div class="input__container">
-									<label for="society">Société</label>
-									<input type="text" id="society" class="contact__input" />
-								</div>
-								<div class="input__container">
-									<label for="object">Objet</label>
-									<input type="email" id="object" class="contact__input" />
-								</div>
+							<div class="input__container">
+								<label for="email">Email</label>
+								<input type="email" id="email" class="contact__input" />
 							</div>
-							<div class="message__container">
-								<label for="message">Message</label>
-								<textarea
-									name="message"
-									id="message"
-									class="contact__message"
-								></textarea>
+						</div>
+						<div class="flex__input">
+							<div class="input__container">
+								<label for="society">Société</label>
+								<input type="text" id="society" class="contact__input" />
 							</div>
-							<button type="submit" class="button contact__button">
-								Envoyer
-							</button>
-						</form>
-					</div>
+							<div class="input__container">
+								<label for="object">Objet</label>
+								<input type="email" id="object" class="contact__input" />
+							</div>
+						</div>
+						<div class="message__container">
+							<label for="message">Message</label>
+							<textarea
+								name="message"
+								id="message"
+								class="contact__message"
+							></textarea>
+						</div>
+						<button type="submit" class="button contact__button">
+							Envoyer
+						</button>
+					</form>
+					<!-- ======== CONTACT IMAGE FOR LARGE SCREEN -->
+					<img
+						src="../assets/svg/contact/contact_image.svg"
+						class="contact__image"
+						alt="contact-image"
+					/>
 				</section>
 
-				<!-- ========== CONTACT INFORMATION SECTION ============= -->
-				<section class="flex__info">
-					<article class="info">
-						<img
-							src="../assets/svg/contact/location.svg"
-							class="info__icon"
-							alt="location-icon"
-						/>
-						<h3 class="info__title">Location</h3>
-						<p class="info__paragraph">
-							6 Avenue Gambetta, 92160 Antony, France
-						</p>
-					</article>
-					<article class="info">
-						<img
-							src="../assets/svg/contact/phone.svg"
-							class="info__icon"
-							alt="location-icon"
-						/>
-						<h3 class="info__title">Télephone</h3>
-						<p class="info__paragraph">01 48 25 19 51</p>
-					</article>
-					<article class="info">
-						<img
-							src="../assets/svg/contact/mail.svg"
-							class="info__icon"
-							alt="location-icon"
-						/>
-						<h3 class="info__title">Website</h3>
-						<a href="#" class="info__paragraph"> www.dataoptique.fr </a>
-					</article>
-				</section>
+				<div class="flex__info-content">
+					<!-- ========== CONTACT INFORMATION SECTION ============= -->
+					<section class="flex__info">
+						<article class="info">
+							<img
+								src="../assets/svg/contact/location.svg"
+								class="info__icon"
+								alt="location-icon"
+							/>
+							<h3 class="info__title">Location</h3>
+							<p class="info__paragraph">
+								6 Avenue Gambetta, 92160 Antony, France
+							</p>
+						</article>
+						<article class="info">
+							<img
+								src="../assets/svg/contact/phone.svg"
+								class="info__icon"
+								alt="location-icon"
+							/>
+							<h3 class="info__title">Télephone</h3>
+							<p class="info__paragraph">01 48 25 19 51</p>
+						</article>
+						<article class="info">
+							<img
+								src="../assets/svg/contact/mail.svg"
+								class="info__icon"
+								alt="location-icon"
+							/>
+							<h3 class="info__title">Website</h3>
+							<a href="#" class="info__paragraph"> www.dataoptique.fr </a>
+						</article>
+					</section>
 
-				<!-- ========== SOCIAL MEDIA SECTION ============= -->
-				<section class="social">
-					<h1 class="section__title">Suivez-nous</h1>
-					<div class="flex__social">
-						<ul class="flex__social-icons">
-							<li>
-								<a href="#" target="_blank" class="facebook">
-									<i class="fa fa-facebook-square" aria-hidden="true"></i>
-								</a>
-							</li>
-							<li>
-								<a href="#" target="_blank" class="instagram">
-									<i class="fa fa-instagram" aria-hidden="true"></i>
-								</a>
-							</li>
-							<li>
-								<a href="#" target="_blank" class="linkedin">
-									<i class="fa fa-linkedin-square" aria-hidden="true"></i>
-								</a>
-							</li>
-						</ul>
-						<p class="copyright">© Politique de confidentialité 2022</p>
-					</div>
-				</section>
+					<!-- ========== SOCIAL MEDIA SECTION ============= -->
+					<section class="social">
+						<h1 class="section__title">Suivez-nous</h1>
+						<div class="flex__social">
+							<ul class="flex__social-icons">
+								<li>
+									<a href="#" target="_blank" class="facebook">
+										<i class="fa fa-facebook-square" aria-hidden="true"></i>
+									</a>
+								</li>
+								<li>
+									<a href="#" target="_blank" class="instagram">
+										<i class="fa fa-instagram" aria-hidden="true"></i>
+									</a>
+								</li>
+								<li>
+									<a href="#" target="_blank" class="linkedin">
+										<i class="fa fa-linkedin-square" aria-hidden="true"></i>
+									</a>
+								</li>
+							</ul>
+							<p class="copyright">© Politique de confidentialité 2022</p>
+						</div>
+					</section>
+				</div>
 			</div>
 		</main>
 	</body>
