Compléter le responsive mobile pour la page de connexion

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 				</nav>
 			</div>
 		</header>
-		<!-- ======= End Navbar ======= -->
+		<!-- ======= End Header ======= -->
 
 		<main class="section full-height">
 			<!-- ======= Start Home ======= -->
