correction des bugs et faire des modification pour la page d'accueil

--- a/fr/contact.html
+++ b/fr/contact.html
@@ -63,7 +63,7 @@
 
 				<div class="flex__info-content">
 					<!-- ========== CONTACT INFORMATION SECTION ============= -->
-					<section class="flex__info">
+					<section class="flex__contact-info">
 						<article class="info">
 							<img
 								src="../assets/svg/contact/location.svg"
