--- a/index.html
+++ b/index.html
@@ -39,27 +39,8 @@
 							<a href="#" class="button nav__connexion-mobile">
 								Connexion <i class="fa fa-arrow-right"></i>
 							</a>
-							<a href="#" class="button alt nav__connexion-mobile">
-								Crée un compte <i class="fa fa-sign-in" aria-hidden="true"></i>
-							</a>
 						</div>
-						<div class="social__media">
-							<a href="#" target="_blank" class="facebook__link">
-								<i class="fa fa-facebook-square" aria-hidden="true"></i>
-							</a>
-							<a href="#" target="_blank" class="instagram__link">
-								<i class="fa fa-instagram" aria-hidden="true"></i>
-							</a>
-							<a href="#" target="_blank" class="linkedin__link">
-								<i class="fa fa-linkedin-square" aria-hidden="true"></i>
-							</a>
-						</div>
-						<p class="nav__copyright">
-							Copyright (c) 2022 Cawipad,<br />
-							Tous droits réservés.
-						</p>
 					</ul>
-
 					<div class="nav__toggle" id="nav-toggle">
 						<i class="fa fa-bars"></i>
 					</div>
@@ -78,21 +59,25 @@
 				<div class="container">
 					<div class="flex__home">
 						<section class="home__content">
-							<h1 class="home__title">La solution CawiPad</h1>
+							<h1 class="home__title">Cawipad</h1>
+							<h3 class="home__subtitle">La tablette tactile clé en main</h3>
+							<img
+								src="assets/svg/accueil/home_image.svg"
+								class="home__image-mobile"
+								alt="home-image"
+							/>
 							<p class="home__paragraph">
 								Vous souhaitez mesurer la satisfaction de vos clients et la
-								qualité de vos services ?<br />Recueillir des données
-								commerciales pour améliorer votre image et fidéliser vos clients
-								? <br />
-								Cawipad est votre solution.
+								qualité de vos services ?
 							</p>
-
-							<div class="home__buttons flex">
-								<a href="#" class="button">Inscription</a>
-								<a href="#" class="button alt">
-									<i class="fa fa-play-circle-o"></i> Démonstration
-								</a>
-							</div>
+							<p class="home__paragraph">
+								Recueillir des données commerciales pour améliorer votre image
+								et fidéliser vos clients ?
+							</p>
+							<p class="home__paragraph">Cawipad est la solution adaptée.</p>
+							<a href="#" class="button alt home__btn">
+								<i class="fa fa-play-circle-o"></i> Démonstration
+							</a>
 						</section>
 						<img
 							src="assets/svg/accueil/home_image.svg"
@@ -126,7 +111,11 @@
 							Cawipad est une solution développée et proposée par l'entreprise
 							DataOptique.
 						</p>
-						<a href="#" class="button about__btn">
+						<a
+							href="https://www.dataoptique.com"
+							target="_blank"
+							class="button about__btn"
+						>
 							En savoir plus <i class="fa fa-arrow-right"></i>
 						</a>
 					</div>
@@ -392,7 +381,7 @@
 				<h2 class="section__title">Les services Cawipad</h2>
 				<p class="section__paragraph">
 					Cawipad est une offre de service clés-en-main pour réaliser tout types
-					de questionnaires.
+					de questionnaires
 				</p>
 				<div class="flex__services">
 					<article class="service">
@@ -527,9 +516,9 @@
 		<!-- ======= Start Aventages ======= -->
 		<section class="section aventages">
 			<div class="container">
-				<h2 class="section__title">Les Aventages Cawipad</h2>
+				<h2 class="section__title">Les Aventages de Cawipad</h2>
 				<p class="section__paragraph">
-					Ce nouveau modèle économique révolutionnaire vous épargne
+					Notre solution moderne et pratique vous épargne
 				</p>
 				<div class="flex__aventages">
 					<article class="aventage">
@@ -602,7 +591,7 @@
 						</div>
 						<div class="flex__info">
 							<i class="fa fa-phone" aria-hidden="true"></i>
-							<p>+33 (0) 1.46.45.01.48</p>
+							<p>+33 1 46 45 01 48</p>
 						</div>
 						<div class="flex__info">
 							<i class="fa fa-envelope-o" aria-hidden="true"></i>
@@ -613,7 +602,7 @@
 						<h3 class="footer_title">Liens utiles</h3>
 						<a href="#" class="flex__info">
 							<i class="fa fa-chevron-right" aria-hidden="true"></i>
-							<p>Inscription</p>
+							<p>les mentions légales</p>
 						</a>
 						<a href="#" class="flex__info">
 							<i class="fa fa-chevron-right" aria-hidden="true"></i>
@@ -634,20 +623,24 @@
 							<i class="fa fa-phone" aria-hidden="true"></i>
 							<p>01 48 25 19 51</p>
 						</div>
-						<div class="flex__info">
+						<a
+							href="https://www.dataoptique.com"
+							target="_blank"
+							class="flex__info dataoptique__link"
+						>
 							<i class="fa fa-laptop" aria-hidden="true"></i>
-							<a href="#">www.dataoptique.fr</a>
-						</div>
+							<p>www.dataoptique.fr</p>
+						</a>
 					</article>
 				</div>
 				<div class="social__media">
-					<a href="#" target="_blank">
+					<a href="https://www.facebook.com/dataoptiqueFR" target="_blank">
 						<i class="fa fa-facebook-square" aria-hidden="true"></i>
 					</a>
-					<a href="#" target="_blank">
+					<a href="https://www.instagram.com/dataoptique/" target="_blank">
 						<i class="fa fa-instagram" aria-hidden="true"></i>
 					</a>
-					<a href="#" target="_blank">
+					<a href="https://www.linkedin.com/company/26330740/" target="_blank">
 						<i class="fa fa-linkedin-square" aria-hidden="true"></i>
 					</a>
 				</div>
