fixé les bugs de la page d'accuil

--- a/fr/connexion.html
+++ b/fr/connexion.html
@@ -38,18 +38,18 @@
 							</div>
 							<div class="input__container-save">
 								<input type="checkbox" name="" id="save" />
-								<label for="save">Souvenez-vous de moi</label>
+								<label for="save">Se souvenir de moi</label>
 							</div>
 							<button type="submit" class="button connexion__form-btn">
-								se-connecter
+								se connecter
 							</button>
 						</form>
 						<!-- ======== END CONNEXION FORM ========== -->
 						<div class="links__container">
 							<a href="#" class="connexion__link">mot de passe oublié ?</a>
-							<a href="#" class="connexion__link"
-								>Vous n’avez pas de compte ?</a
-							>
+							<a href="#" class="connexion__link">
+								Vous n’avez pas de compte ?
+							</a>
 						</div>
 					</div>
 
