--- a/fr/contact.html
+++ b/fr/contact.html
@@ -12,12 +12,7 @@
 	<body>
 		<main class="contact">
 			<div class="container">
-				<h1 class="section__title">Contactez-Nous</h1>
-				<p class="section__paragraph">
-					Nous assurons la fiabilité, les tarifs à bas prix et le plus important
-					la sécurité et le confort à l’esprit
-				</p>
-
+				<h1 class="section__title">Nous contacter</h1>
 				<section class="flex__contact">
 					<!-- ========== FORM SECTION ============= -->
 					<form action="register" class="contact__form">
